ci(smoke): actually populate boot/wait run blocks (exported env)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,10 +42,35 @@ jobs:
         run: docker compose -f docker-compose.yml -f docker-compose.ci.yml -f docker-compose.override.ci.yml -f docker-compose.alembic.ci.yml config
       - name: Boot backend (smoke)
         shell: bash
-        run: ""
+        run: |-
+          set -euxo pipefail
+          C="docker compose -f docker-compose.yml -f docker-compose.ci.yml -f docker-compose.override.ci.yml -f docker-compose.alembic.ci.yml"
+          $C up -d --build backend
+          $C ps
+          $C logs backend --no-color --tail=120 || true
       - name: Wait for API (healthz)
         shell: bash
-        run: ""
+        run: |-
+          set -euxo pipefail
+          C="docker compose -f docker-compose.yml -f docker-compose.ci.yml -f docker-compose.override.ci.yml -f docker-compose.alembic.ci.yml"
+          for i in {1..60}; do
+            if $C exec -T backend python - <<'PY'
+          import urllib.request, sys
+          try:
+              sys.exit(0 if urllib.request.urlopen("http://127.0.0.1:8000/healthz", timeout=3).getcode()==200 else 1)
+          except Exception:
+              sys.exit(1)
+          PY
+            then
+              echo "✅ API is up!"
+              exit 0
+            fi
+            echo "Waiting... ($i)"; sleep 2
+          done
+          echo "❌ API failed to start in time"
+          $C ps || true
+          $C logs backend --no-color --timestamps | tail -n 300 || true
+          exit 1
       - name: Smoke – process meeting 1
         run: |
           set -euo pipefail
