--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,12 @@ services:
       - ./storage:/app/storage
     working_dir: /app/backend
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000
+  minio:
+    labels:
+      traefik.enable: "true"
+      traefik.docker.network: meeting-notes-assistant_default
+      traefik.http.routers.minio.rule: Host(`minio.mna.local`)
+      traefik.http.routers.minio.entrypoints: websecure
+      traefik.http.routers.minio.tls: "true"
+      traefik.http.middlewares.hsts.headers.stsSeconds: "31536000"
+      traefik.http.routers.minio.middlewares: hsts
