--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -1,78 +1,78 @@
 name: Smoke
 on:
-  push:
-    branches: [ main, feat/**, fix/** ]
   pull_request:
+  push:
+    branches: [ main ]
 
 jobs:
   smoke:
     runs-on: ubuntu-latest
-    timeout-minutes: 15
+    timeout-minutes: 20
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Tooling
+      - name: Install tools (jq + mc)
         run: |
           sudo apt-get update -y
-          sudo apt-get install -y jq
-          docker version
-          docker compose version
+          sudo apt-get install -y jq curl
+          curl -sSL https://dl.min.io/client/mc/release/linux-amd64/mc -o mc
+          chmod +x mc
+          sudo mv mc /usr/local/bin/mc
+          mc --version
 
-      - name: Build images
+      - name: Compose up (db, redis, minio, backend, worker)
         run: |
-          docker compose \
-            -f docker-compose.yml \
-            -f docker-compose.rq.yml \
-            -f docker-compose.ci.yml \
-            build
+          docker compose -f docker-compose.yml \
+                         -f docker-compose.worker.yml \
+                         -f docker-compose.minio.yml \
+                         up -d --build db redis minio backend worker
 
-      - name: Up minimal stack
+      - name: Wait for API health
         run: |
-          docker compose \
-            -f docker-compose.yml \
-            -f docker-compose.rq.yml \
-            -f docker-compose.ci.yml \
-            up -d db redis minio backend worker
+          for i in {1..120}; do
+            curl -fsS http://127.0.0.1:8000/healthz >/dev/null && { echo "API ready"; exit 0; }
+            sleep 1
+          done
+          echo "API did not become healthy"
           docker compose ps
-
-      - name: Wait for API (healthz inside container)
-        run: |
-          set -e
-          for i in $(seq 1 60); do
-            if docker compose -f docker-compose.yml -f docker-compose.rq.yml -f docker-compose.ci.yml \
-              exec -T backend curl -fsS http://127.0.0.1:8000/healthz | grep -q '"status":"ok"'; then
-              echo "API is healthy"
-              exit 0
-            fi
-            sleep 2
-          done
-          echo "API never became healthy" >&2
+          docker compose logs backend
           exit 1
 
-      - name: Enqueue + verify demo job
+      - name: Ensure MinIO bucket (dev)
+        env:
+          MINIO_USER: miniouser
+          MINIO_PASS: miniopass
         run: |
-          set -e
-          JID=$(docker compose -f docker-compose.yml -f docker-compose.rq.yml -f docker-compose.ci.yml \
-            exec -T backend \
-            curl -fsS -H 'content-type: application/json' \
-            -d '{"type":"demo","payload":{"from":"ci"}}' \
-            http://127.0.0.1:8000/v1/jobs | jq -r .id)
-          echo "Enqueued job: $JID"
+          mc alias set local http://127.0.0.1:9000 "$MINIO_USER" "$MINIO_PASS"
+          mc mb local/mna-dev || true
+          mc anonymous set download local/mna-dev
 
-          for i in $(seq 1 30); do
-            STATUS=$(docker compose -f docker-compose.yml -f docker-compose.rq.yml -f docker-compose.ci.yml \
-              exec -T backend \
-              curl -fsS http://127.0.0.1:8000/v1/jobs/$JID | jq -r .status)
-            echo "status=$STATUS"
-            [ "$STATUS" = "succeeded" ] && exit 0
-            sleep 2
-          done
-          echo "Job did not succeed in time" >&2
-          exit 1
+      - name: Run smoke
+        env:
+          MNA_API: http://127.0.0.1:8000
+          S3_PUBLIC_ENDPOINT: http://127.0.0.1:9000
+          TEXT: "hello from CI"
+          DELAY: "0.2"
+        run: bash scripts/smoke.sh
 
       - name: Logs on failure
         if: failure()
         run: |
-          docker compose -f docker-compose.yml -f docker-compose.rq.yml -f docker-compose.ci.yml \
-            logs --no-color --tail=200 backend worker
+          docker compose logs --no-color backend worker | tail -n 500 || true
+
+      - name: Compose down
+        if: always()
+        run: docker compose down -v
+
+  lint-test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+      - run: python -m pip install -r backend/requirements.txt ruff pytest
+      - run: ruff format --check .
+      - run: ruff check .
+      - run: pytest -q || pytest -q -q
