--- a/docker-compose.uvicorn.yml
+++ b/docker-compose.uvicorn.yml
@@ -1,5 +1,8 @@
 services:
   backend:
+    ports:
+      - "8000:8000"
     command: >
       uvicorn app.main:app
-      --host 0.0.0.0 --port 8000 --workers 2 --proxy-headers
+      --host 0.0.0.0
+      --port 8000
