--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,3 +6,9 @@ src = ["backend", "frontend"]
 [tool.ruff.lint]
 # Avoid formatter conflict warning
 ignore = ["COM812"]
+
+[tool.ruff.lint.per-file-ignores]
+"backend/migrations/versions/*.py" = ["I001"]
+
+[tool.ruff.per-file-ignores]
+"backend/migrations/versions/*.py" = ["I001"]
