feat/jobs metrics ci (#12)
* feat(prod-ready): storage(S3/MinIO), RQ worker, jobs API, metrics, migration, compose override, CI smoke

* types(storage): mypy-safe sign_url() + remove orphaned block; tidy mypy scope/excludes

* chore(repo): drop backup files and ignore *.bak*

* dev: runtime overlay + RQ worker wiring; linearize Alembic; demo job

* chore: silence import-sort in Alembic migrations (#ruff I001)

* ci: install jq+mc in smoke workflow; harden smoke.sh; ensure Alembic path

* ci(smoke): add API wait loop; stabilize local & CI smoke

* dev: Makefile targets for ci-up/ci-smoke/ci-down

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,8 @@ slides-*.zip
 uvicorn.pid
 docker-compose.alembic.ci.yml.bak*
 docker-compose.local.yml
+
+# backups
+*.bak*
+/certs/
+/dynamic/tls.yml
