--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,35 +1,23 @@
 repos:
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.6.9
-    hooks:
-      - id: ruff
-        args: [--fix]
-      - id: ruff-format
-
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.11.2
-    hooks:
-      - id: mypy
-        name: mypy (backend packages)
-        pass_filenames: false
-        args:
-          - --config-file=mypy.ini
-          - -p
-          - app
-          - -p
-          - worker
-          - -p
-          - packages
-        additional_dependencies:
-          - sqlalchemy>=2.0
-          - mypy-boto3-s3
-          - types-redis
-          - fastapi
-          - pydantic>=2
-          - pydantic-settings
-          - starlette
-          - rq
-          - prometheus-client
-          - boto3
-          - pdf2image
-          - pytesseract
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  rev: v0.14.4
+  hooks:
+  - id: ruff
+  - id: ruff-format
+- repo: https://github.com/pre-commit/mirrors-mypy
+  rev: v1.18.2
+  hooks:
+  - id: mypy
+    args:
+    - --config=backend/mypy.ini
+    - --namespace-packages
+    - --cache-dir=/dev/null
+    - backend/app
+    additional_dependencies:
+    - sqlalchemy[mypy]>=2.0
+    pass_filenames: false
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v6.0.0
+  hooks:
+  - id: end-of-file-fixer
+  - id: trailing-whitespace
