ci: set PYTHONPATH for tests to import local packages

--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -74,6 +74,8 @@ jobs:
       - run: ruff format --check .
       - run: ruff check .
       - run: pytest -q || pytest -q -q
+    env:
+      PYTHONPATH: ${{ github.workspace }}
 concurrency:
   group: smoke-${{ github.ref }}
   cancel-in-progress: true
