--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,8 @@ services:
     image: minio/minio:latest
     command: server /data --console-address ":9001"
     environment:
-      - MINIO_ROOT_USER=minio
-      - MINIO_ROOT_PASSWORD=minio123
+      MINIO_ROOT_USER: minio
+      MINIO_ROOT_PASSWORD: minio123
     ports:
       - "9000:9000"
       - "9001:9001"
@@ -32,4 +32,7 @@ services:
       traefik.http.routers.minio.entrypoints: websecure
       traefik.http.routers.minio.tls: "true"
       traefik.http.middlewares.hsts.headers.stsSeconds: "31536000"
-      traefik.http.route
+      traefik.http.routers.minio.middlewares: hsts
+
+volumes:
+  minio_data:
