--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
           docker compose version
       - name: Build images
         run: docker compose build
+
   smoke:
     runs-on: ubuntu-latest
     needs: build
@@ -28,6 +29,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           clean: true
+
       - name: Prepare writable storage
         run: |-
           set -euxo pipefail
@@ -35,12 +37,15 @@ jobs:
           mkdir -p storage/1
           chmod -R 0777 storage
           ls -ld storage storage/1
+
       - name: Install test tools (jq, ImageMagick, curl)
         run: |
           sudo apt-get update
           sudo apt-get install -y jq imagemagick curl
+
       - name: Compose config (debug)
         run: docker compose -f docker-compose.yml -f docker-compose.ci.yml -f docker-compose.override.ci.yml -f docker-compose.alembic.ci.yml -f docker-compose.redis.ci.yml config
+
       - name: Boot backend (smoke)
         shell: bash
         run: |-
@@ -50,6 +55,7 @@ jobs:
           $C ps
           $C logs backend --no-color --tail=120 || true
           $C logs worker  --no-color --tail=120 || true
+
       - name: Wait for API (healthz)
         shell: bash
         run: |-
@@ -57,9 +63,12 @@ jobs:
           C="docker compose -f docker-compose.yml -f docker-compose.ci.yml -f docker-compose.override.ci.yml -f docker-compose.alembic.ci.yml -f docker-compose.redis.ci.yml"
           for i in {1..60}; do
             if $C exec -T backend python - <<'PY'
-          import urllib.request, sys
+          import urllib.request
+          import sys
+
           try:
-              sys.exit(0 if urllib.request.urlopen("http://127.0.0.1:8000/healthz", timeout=3).getcode()==200 else 1)
+              resp = urllib.request.urlopen("http://127.0.0.1:8000/healthz", timeout=3)
+              sys.exit(0 if resp.getcode() == 200 else 1)
           except Exception:
               sys.exit(1)
           PY
@@ -74,7 +83,9 @@ jobs:
           $C logs backend --no-color --timestamps | tail -n 300 || true
           $C logs worker  --no-color --timestamps | tail -n 200 || true
           exit 1
+
       - name: Smoke – process meeting 1
+        shell: bash
         run: |-
           set -euo pipefail
           C="docker compose -f docker-compose.yml -f docker-compose.ci.yml -f docker-compose.override.ci.yml -f docker-compose.alembic.ci.yml -f docker-compose.redis.ci.yml"
@@ -84,9 +95,19 @@ jobs:
 
           # submit job
           JOB=$($C exec -T backend python - <<'PY'
-          import json,urllib.request
-          req=urllib.request.Request('http://127.0.0.1:8000/v1/meetings/1/process', method='POST')
-          print(json.load(urllib.request.urlopen(req,timeout=10))['job_id'], end='')
+          import json
+          import sys
+          import urllib.request
+
+          req = urllib.request.Request(
+              "http://127.0.0.1:8000/v1/meetings/1/process",
+              method="POST",
+          )
+          body = json.load(urllib.request.urlopen(req, timeout=10))
+          job_id = body.get("job_id") or body.get("id")
+          if not job_id:
+              raise SystemExit(f"Missing job id in response: {body!r}")
+          print(job_id, end="")
           PY
           )
           echo "JOB=$JOB"
@@ -94,15 +115,34 @@ jobs:
           # poll for completion
           for i in {1..60}; do
             S=$($C exec -T backend python - <<PY
-          import json,urllib.request; print(json.load(urllib.request.urlopen('http://127.0.0.1:8000/v1/jobs/$JOB',timeout=10))['status'], end='')
+          import json, urllib.request
+          print(
+              json.load(
+                  urllib.request.urlopen(
+                      "http://127.0.0.1:8000/v1/jobs/$JOB",
+                      timeout=10,
+                  )
+              )["status"],
+              end="",
+          )
           PY
           )
             echo "status=$S"
             [ "$S" = "finished" ] && break
             sleep 2
           done
+
           FINAL=$($C exec -T backend python - <<PY
-          import json,urllib.request; print(json.load(urllib.request.urlopen('http://127.0.0.1:8000/v1/jobs/$JOB',timeout=10))['status'], end='')
+          import json, urllib.request
+          print(
+              json.load(
+                  urllib.request.urlopen(
+                      "http://127.0.0.1:8000/v1/jobs/$JOB",
+                      timeout=10,
+                  )
+              )["status"],
+              end="",
+          )
           PY
           )
           if [ "$FINAL" != "finished" ]; then
@@ -113,26 +153,39 @@ jobs:
 
           # fetch notes JSON
           $C exec -T backend python - <<'PY' | jq .
-          import sys,urllib.request; print(urllib.request.urlopen('http://127.0.0.1:8000/v1/meetings/1/notes',timeout=10).read().decode(), end='')
+          import urllib.request
+
+          print(
+              urllib.request.urlopen(
+                  "http://127.0.0.1:8000/v1/meetings/1/notes",
+                  timeout=10,
+              )
+              .read()
+              .decode(),
+              end="",
+          )
           PY
-        shell: bash
+
       - name: Archive docker logs (on failure)
         if: failure()
         run: |
           mkdir -p artifacts
           docker compose -f docker-compose.yml -f docker-compose.ci.yml -f docker-compose.override.ci.yml -f docker-compose.alembic.ci.yml ps
           docker compose -f docker-compose.yml -f docker-compose.ci.yml -f docker-compose.override.ci.yml -f docker-compose.alembic.ci.yml logs --no-color > artifacts/compose.log
+
       - name: Upload logs artifact (on failure)
         if: failure()
         uses: actions/upload-artifact@v4
         with:
           name: docker-logs
           path: artifacts/compose.log
+
       - name: Show container logs (always)
         if: always()
         run: |
           docker compose -f docker-compose.yml -f docker-compose.ci.yml -f docker-compose.override.ci.yml -f docker-compose.alembic.ci.yml ps
           docker compose -f docker-compose.yml -f docker-compose.ci.yml -f docker-compose.override.ci.yml -f docker-compose.alembic.ci.yml logs --no-color --timestamps || true
+
       - name: Tear down (always)
         if: always()
         run: docker compose -f docker-compose.yml -f docker-compose.ci.yml -f docker-compose.override.ci.yml -f docker-compose.alembic.ci.yml down -v
