--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,13 @@
 name: CI
+
 on:
   push:
   pull_request:
+
 concurrency:
   group: ci-${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
+
 permissions: read-all
 
 jobs:
@@ -26,6 +29,7 @@ jobs:
     env:
       DATABASE_URL: sqlite:////app/backend/dev.db
       REDIS_URL: redis://redis:6379/0
+
     steps:
       - uses: actions/checkout@v4
         with:
@@ -45,7 +49,13 @@ jobs:
           sudo apt-get install -y jq imagemagick curl
 
       - name: Compose config (debug)
-        run: docker compose -f docker-compose.yml -f docker-compose.ci.yml -f docker-compose.override.ci.yml -f docker-compose.alembic.ci.yml -f docker-compose.redis.ci.yml config
+        run: docker compose \
+          -f docker-compose.yml \
+          -f docker-compose.ci.yml \
+          -f docker-compose.override.ci.yml \
+          -f docker-compose.alembic.ci.yml \
+          -f docker-compose.redis.ci.yml \
+          config
 
       - name: Boot backend (smoke)
         shell: bash
@@ -64,8 +74,8 @@ jobs:
           C="docker compose -f docker-compose.yml -f docker-compose.ci.yml -f docker-compose.override.ci.yml -f docker-compose.alembic.ci.yml -f docker-compose.redis.ci.yml"
           for i in {1..60}; do
             if $C exec -T backend python - <<'PY'
-          import urllib.request
           import sys
+          import urllib.request
 
           try:
               resp = urllib.request.urlopen("http://127.0.0.1:8000/healthz", timeout=3)
@@ -94,7 +104,7 @@ jobs:
           # Sanity
           $C ps
 
-          # 1) Create a meeting via API (mirrors pytest tests)
+          # 1) Create a meeting via API (same as pytest flow)
           MEETING_ID=$($C exec -T backend python - <<'PY'
           import json
           import urllib.request
@@ -112,8 +122,9 @@ jobs:
               },
               method="POST",
           )
-          resp = json.load(urllib.request.urlopen(req, timeout=10))
-          print(resp["id"], end="")
+          resp = urllib.request.urlopen(req, timeout=10)
+          body = json.load(resp)
+          print(body["id"], end="")
           PY
           )
           echo "Created meeting id=${MEETING_ID}"
@@ -130,18 +141,16 @@ jobs:
               headers={"X-API-Key": "dev-secret-123"},
               method="POST",
           )
-          resp = json.load(urllib.request.urlopen(req, timeout=10))
-          jid = resp.get("job_id")
-          if not jid:
-              raise SystemExit(f"Missing job_id in response: {resp!r}")
-          print(jid, end="")
+          resp = urllib.request.urlopen(req, timeout=10)
+          body = json.load(resp)
+          print(body["job_id"], end="")
           PY
           )
           echo "JOB=${JOB}"
 
           # 3) Poll the job until it finishes
           for i in {1..60}; do
-            S=$($C exec -T backend python - <<PY
+            STATUS=$($C exec -T backend python - <<PY
           import json
           import urllib.request
 
@@ -151,15 +160,17 @@ jobs:
               headers={"X-API-Key": "dev-secret-123"},
               method="GET",
           )
-          print(json.load(urllib.request.urlopen(req, timeout=10))["status"], end="")
+          resp = urllib.request.urlopen(req, timeout=10)
+          body = json.load(resp)
+          print(body["status"], end="")
           PY
           )
-            echo "status=$S"
-            [ "$S" = "finished" ] && break
+            echo "status=${STATUS}"
+            [ "${STATUS}" = "finished" ] && break
             sleep 2
           done
 
-          FINAL=$($C exec -T backend python - <<PY
+          FINAL_STATUS=$($C exec -T backend python - <<PY
           import json
           import urllib.request
 
@@ -169,12 +180,14 @@ jobs:
               headers={"X-API-Key": "dev-secret-123"},
               method="GET",
           )
-          print(json.load(urllib.request.urlopen(req, timeout=10))["status"], end="")
+          resp = urllib.request.urlopen(req, timeout=10)
+          body = json.load(resp)
+          print(body["status"], end="")
           PY
           )
 
-          if [ "$FINAL" != "finished" ]; then
-            echo "Job did not finish in time (status=$FINAL)"
+          if [ "${FINAL_STATUS}" != "finished" ]; then
+            echo "Job did not finish in time (status=${FINAL_STATUS})"
             $C logs worker --no-color --timestamps | tail -n 200 || true
             exit 1
           fi
@@ -187,8 +200,10 @@ jobs:
           req = urllib.request.Request(
               url,
               headers={"X-API-Key": "dev-secret-123"},
+              method="GET",
           )
-          print(urllib.request.urlopen(req, timeout=10).read().decode(), end="")
+          resp = urllib.request.urlopen(req, timeout=10)
+          print(resp.read().decode(), end="")
           PY
 
       - name: Archive docker logs (on failure)
