--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,13 +49,14 @@ jobs:
           sudo apt-get install -y jq imagemagick curl
 
       - name: Compose config (debug)
-        run: docker compose \
-          -f docker-compose.yml \
-          -f docker-compose.ci.yml \
-          -f docker-compose.override.ci.yml \
-          -f docker-compose.alembic.ci.yml \
-          -f docker-compose.redis.ci.yml \
-          config
+        run: |-
+          docker compose \
+            -f docker-compose.yml \
+            -f docker-compose.ci.yml \
+            -f docker-compose.override.ci.yml \
+            -f docker-compose.alembic.ci.yml \
+            -f docker-compose.redis.ci.yml \
+            config
 
       - name: Boot backend (smoke)
         shell: bash
