--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,10 +16,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-buildx-action@v3
+
       - name: Docker info
         run: |
           docker --version
           docker compose version
+
       - name: Build images
         run: docker compose build
 
@@ -36,7 +38,7 @@ jobs:
           clean: true
 
       - name: Prepare writable storage
-        run: |-
+        run: |
           set -euxo pipefail
           rm -rf storage || true
           mkdir -p storage/1
@@ -49,7 +51,7 @@ jobs:
           sudo apt-get install -y jq imagemagick curl
 
       - name: Compose config (debug)
-        run: |-
+        run: |
           docker compose \
             -f docker-compose.yml \
             -f docker-compose.ci.yml \
@@ -60,7 +62,7 @@ jobs:
 
       - name: Boot backend (smoke)
         shell: bash
-        run: |-
+        run: |
           set -euxo pipefail
           C="docker compose -f docker-compose.yml -f docker-compose.ci.yml -f docker-compose.override.ci.yml -f docker-compose.alembic.ci.yml -f docker-compose.redis.ci.yml"
           $C up -d --build redis backend worker
@@ -70,9 +72,10 @@ jobs:
 
       - name: Wait for API (healthz)
         shell: bash
-        run: |-
+        run: |
           set -euxo pipefail
           C="docker compose -f docker-compose.yml -f docker-compose.ci.yml -f docker-compose.override.ci.yml -f docker-compose.alembic.ci.yml -f docker-compose.redis.ci.yml"
+
           for i in {1..60}; do
             if $C exec -T backend python - <<'PY'
           import sys
@@ -88,26 +91,30 @@ jobs:
               echo "✅ API is up!"
               exit 0
             fi
-            echo "Waiting... ($i)"; sleep 2
+            echo "Waiting... (\$i)"
+            sleep 2
           done
+
           echo "❌ API failed to start in time"
           $C ps || true
           $C logs backend --no-color --timestamps | tail -n 300 || true
           $C logs worker  --no-color --timestamps | tail -n 200 || true
           exit 1
 
-      - name: Smoke – process meeting 1
+      - name: Smoke – meeting + job flow
         shell: bash
-        run: |-
+        run: |
           set -euo pipefail
           C="docker compose -f docker-compose.yml -f docker-compose.ci.yml -f docker-compose.override.ci.yml -f docker-compose.alembic.ci.yml -f docker-compose.redis.ci.yml"
 
           # Sanity
           $C ps
 
-          # 1) Create a meeting via API
+          # 1) Create a meeting via API (same as pytest)
           MEETING_ID=$($C exec -T backend python - <<'PY'
           import json
+          import sys
+          import urllib.error
           import urllib.request
 
           payload = json.dumps(
@@ -123,16 +130,28 @@ jobs:
               },
               method="POST",
           )
-          resp = urllib.request.urlopen(req, timeout=10)
+
+          try:
+              resp = urllib.request.urlopen(req, timeout=10)
+          except urllib.error.HTTPError as e:
+              sys.stderr.write(
+                  f"CREATE /v1/meetings failed: HTTP {e.code} for {e.url}\\n"
+              )
+              sys.stderr.write(e.read().decode() + "\\n")
+              raise SystemExit(1)
+
           body = json.load(resp)
-          print(body["id"], end="")
+          sys.stdout.write(str(body["id"]))
           PY
           )
-          echo "Created meeting id=${MEETING_ID}"
 
-          # 2) Kick off processing job
+          echo "Created meeting id=\${MEETING_ID}"
+
+          # 2) Kick off processing job for that meeting
           JOB=$($C exec -T backend python - <<PY
           import json
+          import sys
+          import urllib.error
           import urllib.request
 
           url = f"http://127.0.0.1:8000/v1/meetings/${MEETING_ID}/process"
@@ -142,17 +161,27 @@ jobs:
               headers={"X-API-Key": "dev-secret-123"},
               method="POST",
           )
-          resp = urllib.request.urlopen(req, timeout=10)
+
+          try:
+              resp = urllib.request.urlopen(req, timeout=10)
+          except urllib.error.HTTPError as e:
+              sys.stderr.write(f"POST {url} failed: HTTP {e.code}\\n")
+              sys.stderr.write(e.read().decode() + "\\n")
+              raise SystemExit(1)
+
           body = json.load(resp)
-          print(body["job_id"], end="")
+          sys.stdout.write(str(body["job_id"]))
           PY
           )
-          echo "JOB=${JOB}"
 
-          # 3) Poll job until finished
+          echo "JOB=\${JOB}"
+
+          # 3) Poll the job until it finishes
           for i in {1..60}; do
             STATUS=$($C exec -T backend python - <<PY
           import json
+          import sys
+          import urllib.error
           import urllib.request
 
           url = f"http://127.0.0.1:8000/v1/jobs/${JOB}"
@@ -161,18 +190,27 @@ jobs:
               headers={"X-API-Key": "dev-secret-123"},
               method="GET",
           )
-          resp = urllib.request.urlopen(req, timeout=10)
+
+          try:
+              resp = urllib.request.urlopen(req, timeout=10)
+          except urllib.error.HTTPError as e:
+              sys.stderr.write(f"GET {url} failed: HTTP {e.code}\\n")
+              sys.stderr.write(e.read().decode() + "\\n")
+              raise SystemExit(1)
+
           body = json.load(resp)
-          print(body["status"], end="")
+          sys.stdout.write(body["status"])
           PY
-          )
-            echo "status=${STATUS}"
-            [ "${STATUS}" = "finished" ] && break
+            )
+            echo "status=\${STATUS}"
+            [ "\${STATUS}" = "finished" ] && break
             sleep 2
           done
 
           FINAL_STATUS=$($C exec -T backend python - <<PY
           import json
+          import sys
+          import urllib.error
           import urllib.request
 
           url = f"http://127.0.0.1:8000/v1/jobs/${JOB}"
@@ -181,17 +219,50 @@ jobs:
               headers={"X-API-Key": "dev-secret-123"},
               method="GET",
           )
-          resp = urllib.request.urlopen(req, timeout=10)
+
+          try:
+              resp = urllib.request.urlopen(req, timeout=10)
+          except urllib.error.HTTPError as e:
+              sys.stderr.write(f"GET {url} failed: HTTP {e.code}\\n")
+              sys.stderr.write(e.read().decode() + "\\n")
+              raise SystemExit(1)
+
           body = json.load(resp)
-          print(body["status"], end="")
+          sys.stdout.write(body["status"])
           PY
           )
 
-          if [ "${FINAL_STATUS}" != "finished" ]; then
-            echo "Job did not finish in time (status=${FINAL_STATUS})"
+          if [ "\${FINAL_STATUS}" != "finished" ]; then
+            echo "Job did not finish in time (status=\${FINAL_STATUS})"
             $C logs worker --no-color --timestamps | tail -n 200 || true
             exit 1
           fi
+
+          # 4) Best-effort notes fetch – warn only, don't fail the job
+          $C exec -T backend python - <<PY | jq . || echo "WARN: /notes fetch failed (non-fatal)"
+          import json
+          import sys
+          import urllib.error
+          import urllib.request
+
+          url = f"http://127.0.0.1:8000/v1/meetings/${MEETING_ID}/notes"
+          req = urllib.request.Request(
+              url,
+              headers={"X-API-Key": "dev-secret-123"},
+              method="GET",
+          )
+
+          try:
+              resp = urllib.request.urlopen(req, timeout=10)
+          except urllib.error.HTTPError as e:
+              sys.stderr.write(
+                  f"/notes returned HTTP {e.code} – ignoring in smoke\\n"
+              )
+              sys.stderr.write(e.read().decode() + "\\n")
+              raise SystemExit(0)
+
+          sys.stdout.write(resp.read().decode())
+          PY
 
       - name: Archive docker logs (on failure)
         if: failure()
